This package requires requests

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = requests
+
 
 [options.package_data]
 ebay_rest = references/*.json
